--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navigateur - Ordinateur</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="browser">
+        <div class="address-bar">
+            <input type="text" id="url-input" placeholder="Entrez l'URL...">
+            <button onclick="goToURL()">Go</button>
+        </div>
+        <iframe id="webview" src=""></iframe>
+    </div>
 
+    <script src="script.js"></script>
+</body>
+</html>
